# moveit_studio_ur_ws

./: .env  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile-nvidia  LICENSE  README.md  colcon-defaults.yaml  docker-compose-overlay.yaml  docker-compose.yaml  entrypoint.sh  package.xml
blah/picknik_ur_mobile_config/: CMakeLists.txt
blah/picknik_ur_mobile_config/objectives/: apriltag_pick_object.xml
moveit_studio_ur_pstop_manager/: CMakeLists.txt
moveit_studio_ur_pstop_manager/include/moveit_studio_ur_pstop_manager/: protective_stop_manager_node.hpp
moveit_studio_ur_pstop_manager/src/: protective_stop_manager_node.cpp
src/arm_on_rail_sim/: CMakeLists.txt  README.md  generate_urdf_from_xacro.py  package.xml  test_xacro.py
src/arm_on_rail_sim/config/: config.yaml
src/arm_on_rail_sim/description/: eoat.urdf  lab_scene.xml  linear_rail.xml  picknik_ur.xacro  scene.xml  ur5e.xml  ur5e_globals.xml
src/arm_on_rail_sim/launch/: agent_bridge.launch.xml  visualize_generated_urdf.launch.py
src/arm_on_rail_sim/objectives/: 3_waypoint_pick_and_place.xml  add_collision_object.xml  apriltag_detection_config.yaml  apriltag_pick_object.xml  attach_tool.xml  constrained_pick_place.xml  cycle_between_waypoints.xml  get_april_tag_pose_from_image.xml  grab_bottle.xml  joint_diagnostic.xml  load_mesh_as_green_poincloud.xml  load_mesh_as_red_pointcloud.xml  look_at_table.xml  move_with_velocity_and_force.xml  pick_april_tag_object_with_approval.xml  pick_first_object_in_vector.xml  pick_object.xml  pick_up_cube.xml  place_first_object_in_vector.xml  place_object.xml  plan_move_to_pose.xml  register_cad_part.xml  robotiq_base_link.urdf  take_snap.xml  test_add_tool.xml  test_remove_tool.xml  wrist_snap.xml
src/arm_on_rail_sim/waypoints/: ur_waypoints.yaml
src/bin_picking_config/: CMakeLists.txt  README.md  package.xml
src/bin_picking_config/calibrate/: calibrate.yaml  calibration_poses.yaml  capture.yaml  scene_camera_calibration.yaml
src/bin_picking_config/config/: config.yaml
src/bin_picking_config/description/: .gitattributes  environment.xacro  picknik_ur.xacro  picknik_ur_attachments_macro.xacro  picknik_ur_macro.xacro  picknik_ur_mujoco_ros2_control.xacro  scene.xml  simulate  ur10e.xml
src/bin_picking_config/launch/: agent_bridge.launch.xml  calibrate_launch.py  robot_drivers_to_persist.launch.py  rs_cameras.launch.xml  ur_tool_comms.launch.xml
src/bin_picking_config/objectives/: 3_waypoint_pick_and_place.xml  activate_sim_magswitch.xml  apriltag_detection_config.yaml  calibration.xml  capture_calibration.xml  clear_snapshot.xml  close_gripper.xml  cycle_between_waypoints.xml  deactivate_magswitch.xml  deactivate_sim_magswitch.xml  demo.xml  extrinsic_calibration.xml  find_apriltag.xml  find_part.xml  inspect_fallen_part.xml  interpolate_to_joint_state.xml  move_to_joint_state.xml  move_to_pose.xml  move_to_waypoint.xml  open_gripper.xml  pick_and_place.xml  pick_floor_part.xml  register_part.xml  save_pcd.xml  scene_snapshot.xml  stream_camera.xml  teleoperate.xml  trigger_camera.xml  wrist_snapshot.xml  zivid_snapshot.xml
src/bin_picking_config/waypoints/: cal_waypoints.yaml  ur_waypoints.yaml
src/generic_ur_config/: CMakeLists.txt  package.xml
src/generic_ur_config/config/: base_config.yaml  cameras.yaml
src/generic_ur_config/description/: empty.world  gripper_and_camera.xacro  picknik_ur.xacro  simulation_scene.urdf.xacro
src/generic_ur_config/launch/: hardware.launch.py  robot_drivers_to_persist.launch.py  robot_drivers_to_restart.launch.py
src/generic_ur_config/objectives/: 3_waypoint_pick_and_place.xml  apriltag_servoing.xml  apriltag_servoing_config.yaml  find_cuboids.xml  inspect_surface.xml  interpolate_to_joint_state.xml  interpolate_to_named_state.xml  move_to_joint_state.xml  move_to_known_pose.xml  open_door_affordance.xml  open_lever_handle_door.xml  pick_object.xml  push_along_axis.xml  push_along_axis_config.yaml  reactivate_gripper.xml  take_multi_snapshot.xml  take_snapshot.xml  tree_nodes_model.xml  update_admittance_controller.xml
src/generic_ur_config/waypoints/: waypoints.yaml
src/mobile_manipulation_config/: CMakeLists.txt  README.md  package.xml
src/mobile_manipulation_config/config/: config.yaml
src/mobile_manipulation_config/description/: picknik_ur.xacro  scene.xml  ur5e.xml
src/mobile_manipulation_config/objectives/: 00_solution_-_move_to_initial_pose.xml  01_solution_-_create_a_pose.xml  02_solution_-_visualize_a_pose.xml  03_solution_-_pose_2m_above_the_robot.xml  04_solution_-_move_to_a_pose.xml  05_solution_-_define_a_path.xml  06_solution_-_visualize_a_path.xml  (+23 more)
src/moveit_studio_agent_examples/: CMakeLists.txt  README.md  package.xml
src/moveit_studio_agent_utils/: CMakeLists.txt  README.md  package.xml
src/moveit_studio_ur_pstop_manager/: CMakeLists.txt  README.md  package.xml
src/picknik_dual_ur_arm_config/: CMakeLists.txt  README.md  package.xml
src/picknik_registration/: CMakeLists.txt  behavior_plugin.yaml  package.xml  picknik_registration_plugin_description.xml
src/picknik_ur_bin_picking_config/: CMakeLists.txt  README.md  package.xml
src/picknik_ur_epick_config/: CMakeLists.txt  README.md  package.xml
src/picknik_ur_gazebo/: CMakeLists.txt  package.xml
src/picknik_ur_gazebo_config/: CMakeLists.txt  README.md  open_door_lever_handle_MTC_config.yaml  package.xml
src/picknik_ur_gazebo_peg_in_hole/: CMakeLists.txt  README.md  open_door_fixed_handle_MTC_config.yaml  package.xml
src/picknik_ur_gazebo_scan_and_plan_config/: CMakeLists.txt  README.md  package.xml
src/picknik_ur_mobile_config/: CMakeLists.txt  README.md  package.xml
src/picknik_ur_mock_hardware/: CMakeLists.txt  package.xml
src/picknik_ur_multi_arm_gazebo_config/: CMakeLists.txt  README.md  package.xml
src/picknik_ur_site_config/: CMakeLists.txt  README.md  package.xml
src/picknik_ur_studio_integration_testing/: CMakeLists.txt  package.xml
src/setup_mtc_place_pose/: CMakeLists.txt  behavior_plugin.yaml  package.xml  setup_mtc_place_pose_plugin_description.xml
(+1023 files in other folders)
