<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_studio_ur_pstop_manager</name>
  <version>6.0.0</version>
  <description>
    Provides a node to monitor the protective stop state of the UR5, and reset
    protective
    stops when necessary.
  </description>
  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <build_depend>moveit_studio_common</build_depend>

  <depend>controller_manager_msgs</depend>
  <depend>moveit_studio_agent_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_robot_driver</depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
