<?xml version="1.0"?>
<package format="3">
  <name>picknik_ur_bin_picking_config</name>
  <version>2.7.0</version>

  <description>Base configuration package for UR robot arm with Robotiq E-Pick gripper</description>

  <maintainer email="studio.maintainers@picknik.ai">MoveIt Studio Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>admittance_controller</exec_depend>
  <exec_depend>kinematics_interface_kdl</exec_depend>
  <exec_depend>moveit_planners_stomp</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_studio_agent</exec_depend>
  <exec_depend>moveit_studio_behavior</exec_depend>
  <exec_depend>moveit_studio_ur_pstop_manager</exec_depend>
  <exec_depend>pick_ik</exec_depend>
  <exec_depend>picknik_accessories</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>epick_controllers</exec_depend>
  <exec_depend>epick_description</exec_depend>
  <exec_depend>epick_moveit_plugin</exec_depend>
  <exec_depend>epick_moveit_studio</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
