<?xml version="1.0"?>
<package format="3">
  <name>picknik_ur_gazebo</name>
  <version>1.11.0</version>

  <description>Site config package for the simulated UR-5e. The existence of this package is a workaround for issues with Gazebo simulation that require the simulated robot configuration be substantially different from the normal robot configuration.</description>

  <maintainer email="joseph.schornak@picknik.ai">Joseph Schornak</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>picknik_ur5e_base_config</depend>

  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
