<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>picknik_ur_studio_integration_testing</name>
  <version>5.0.0</version>
  <description>Integration tests for UR with MoveIt Pro.</description>
  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>moveit_studio_agent</test_depend>
  <test_depend>moveit_studio_common</test_depend>
  <test_depend>moveit_studio_ur_pstop_manager</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>std_srvs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
